Ajustes no CSS e HTML com adição de novas classes para mudar layout do site.

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                 <a href="https://github.com/tryber" target="_blank">Tryber</a>
         </nav>
         </section>
-        <aside>
+        <aside class="lado-direito">
             <p>Na Trybe estou aprendendo não apenas habilidades técnicas, como também estou aprendendo habilidades comportamentais.</p>
         </aside>
-        <article>
+        <article class="lado-esquerdo">
             <h2>Primeros 15 dias na Trybe</h2>
             <p>As duas primeiras semanas de estudo na <a href="http://www.betrybe.com" target="_blank">Trybe</a> foram muito intensas: Bastante informação nova, muitos exercícios práticos, desafios e realizações. A Tribo B da Turma 16 é super proativa e colaborativa e a equipe de facilitação é maravilhosa. Só gente bacana!</p>
             <p> Estou adorando o processo, bem feliz com as primeiras conquistas e super empolgada com o caminho a seguir. #vqv #goTrybe</p>
         </article>
-        <section>
+        <section class="secao-esquerda">
             <h3>Lições aprendidas</h3>
             <ol id="licoes_aprendidas">
                 <li>Unix e Shell</li>
@@ -46,7 +46,7 @@
                 <li>Soft-skills: Introdução ao Desenvolvimento de Inteligência Emocional.</li>
             </ol>
         </section>
-        <section>
+        <section class="secao-direita">
             <h3>Lições a aprender</h3>
             <ul id="licoes_a_aprender">
                 <li>Lógica da Programação e Algoritmos</li>
