--- a/index.html
+++ b/index.html
@@ -7,10 +7,35 @@
         <div>
         <header id="cabecalho">
            <h1 id="titulo"> 
-               Titulo foda</h1>
+              João Victor Avelino - Lessons learned </h1>
         </header>
-
         <img id="minha_foto" src=/IMG-20210416-WA0253.jpg>
+        <br>
+        <br>
+        <ol id="licoes_aprendidas">
+    <li>Unix</li>
+    <li>Bash</li>
+    <li>Git</li>
+    <li>GitHub</li>
+    <li>Internet</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>HTML semantico</li>
+    <li>JavaScript</li>
+    <li>Logica Programação</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>High Order Functions</li>
+            <li>React</li>
+            <li>Context API</li>
+            <li>SQL</li>
+            <li>MongoDB</li>
+            <li>NodeJS</li>
+            <li>Sockets</li>
+            <li>Python</li>
+            <li>Programação Orientada</li>
+            <li>Algoritmos</li>
+        </ul>
         </div>
     </body>
  </html>
