Adição de tabela e sua estilização. Requisitos bônus 15 e 12 OK.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,27 @@
                 <li>Estrutura de Dados</li>
             </ul>
         </section>
+        <table>
+            <tr>
+              <th scope="row">Módulo</th>
+              <td scope="col">Fundamentos</td>
+              <td scope="col">Front-end</td>
+              <td scope="col">Back-end</td>
+              <td scope="col">Ciências da computação</td>
+            </tr>
+            <tr>
+              <th scope="row">Status</th>
+              <td><em>Em progresso</em></td>
+              <td>À fazer</td>
+              <td>À fazer</td>
+              <td>À fazer</td>
+            </tr>
+        </table>
+        <!--
+            Para a construção da tabela, consultei os seguintes materiais:
+            Link: https://www.w3schools.com/html/html_tables.asp
+            Link: https://www.w3schools.com/tags/att_th_scope.asp
+        -->
     </main>
     <footer class="rodape" id="rodape">
         <p>Projeto #1</p>
