--- a/index.html
+++ b/index.html
@@ -15,45 +15,53 @@
         <h1 id="titulo">Gabriel de Oliveira Bins</h1>
     </header>
     <img id="minha_foto" src="fotoperfil.jpg" alt="foto de perfil">
-    <section>   
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Slack</li>
-        <li>Zoom</li>
-        <li>Inteligencia Emocial</li>
-        <li>Semantica HTML</li>
-        <li>Comprometimento</li>
-    </ol>    
-    <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>Forms</li>
-        <li>CSS Responsive</li>
-        <li>ES6</li>
-        <li>HOF</li>
-        <li>Unit Tests</li>
-        <li>React</li>
-        <li>Node</li>
-        <li>SQL</li>        
-    </ul>   
+    <section> 
+        <table>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>Inteligencia Emocial</li>
+                <li>Semantica HTML</li>
+                <li>Comprometimento</li>
+            </ol>    
+                <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>        
+            </ul> 
+        </table>
     </section> 
-    <article>
-        <section>
-        <p>Entrei na Trybe tem quase 3 semanas, e o aprendizado tem sido fantástico, o curso requer bastante foco e compromisso, essa forma de ensino ativo aonde todo dia é colocado em prática o que é aprendido, é um diferencial enorme, os professores e responsáveis passam o conteudo de uma forma bem compreensível, tenho gostado muito dessa nova fase de aprendizado.</p>
-        </section>
-    </article>
-    <aside>
-        <section>
-        <p>O aprendizado na trybe tem sido grande, desde a parte dar hard skills que é a parte de programação em si, como a parte de soft skills, é um diferencial enorme.</p>
-        </section>
-    </aside>
-    <a href="https://github.com/gabrielbins" target="_blank">GitHub</a>
-    <footer id="rodape">
-       <p>Criado por Gabriel Bins</p>
-    </footer>
+    <div class="ajuste">
+        <article class="lado-esquerdo">
+            <section class="sobre">
+            <p>Entrei na Trybe tem quase 3 semanas, e o aprendizado tem sido fantástico, o curso requer bastante foco e compromisso, essa forma de ensino ativo aonde todo dia é colocado em prática o que é aprendido, é um diferencial enorme, os professores e responsáveis passam o conteudo de uma forma bem compreensível, tenho gostado muito dessa nova fase de aprendizado.</p>
+            </section>
+        </article>
+        <aside>
+            <section class="lado-direito">
+            <p>O aprendizado na trybe tem sido grande, desde a parte dar hard skills que é a parte de programação em si, como a parte de soft skills, é um diferencial enorme.</p>
+            </section>
+        </aside>
+
+    </div>
+    <div class="ajuste">
+        <a href="https://github.com/gabrielbins" target="_blank">GitHub</a>
+        <footer id="rodape">
+           <p>Criado por Gabriel Bins</p>
+        </footer>
+
+    </div>
 </body>
 </html>
