--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <nav>
             <ul>
                 <li>Home</li>
-                <li>Login</li>
+                <li><a href="https://github.com/KevinSena" target="_blank">GitHub</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="max-full">
+        <section class="max-full first-section">
             <img id="minha_foto" src="./perfil.jpeg" alt="Minha foto">
-            <a href="https://github.com/KevinSena" target="_blank">GitHub</a>
             <section>
-                <h2>Lições</h2>
+                
                 <ol id="licoes_aprendidas">
+                    <h2>Lições</h2>
                     <li>Unix</li>
                     <li>Git</li>
                     <li>Github</li>
@@ -35,7 +35,9 @@
                     <li>Inspect</li>
                     <li>Semantic HTML</li>
                 </ol>
+                
                 <ul id="licoes_a_aprender">
+                    <h2>Lições a aprender</h2>
                     <li>JavaScript</li>
                     <li>DOM</li>
                     <li>Forms</li>
