styleint updated and checked

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
     <footer id="rodape">
        <p class="rodape2">Criado e editado por <b>Ronny Velardez</b> </p>
+        <!-- Table Reference. https://www.w3schools.com/w3css/w3css_tables.asp-->
        <table>
        <tr>
          <td>29</td>
