C3 - correcao tittle e footer

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Lições aprendidas</title>
 </head>
 <body>
   <header id="cabecalho">
@@ -78,10 +78,12 @@
     </section>
   </main>
   <footer id="rodape">
-    <div id="inline-div" style="display: inline-block;">
-      <h3>Todos os direitos reservados, Eduardo Fradique</h3>
-      <a href="https://github.com/edsfradique" target="_blank">GitHub</a>
-    </div>
+     <div class="div-footer">
+        <h3>Todos os direitos reservados, Eduardo Fradique</h3>
+     </div>
+     <div class="div-footer">
+        <a href="https://github.com/edsfradique" target="_blank"> GitHub</a>
+     </div>
   </footer>
 </body>
 </html>
