photo modified to 320kb.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main>
                 <a class="lado-esquerdofoto"> <img 
                     id="minha_foto" 
-                    src="fotoperfil.jpg" 
+                    src="profilephoto2.png" 
                     alt="foto homem gato e sorridente" >
                 </a>
                 <a id="linkedin" href="https://www.linkedin.com/in/ronny-velardez-12270021a/" target="_blank"><div class="buttom"> Visit my profile </div>
