--- a/index.html
+++ b/index.html
@@ -28,20 +28,17 @@
         width="200px"
         />
         </figure>
-   
-    <section class="blocos">
-    <article>
-            <h2>Lorem ipsum</h2>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                <br>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
-                <br>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
-                <br>In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-    </article>
-    </section>
 
     <article class="blocos">
-    <section class="lado-esquerdo">
+            <h2>Lorem ipsum</h2>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            <br>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
+            <br>In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibu.</p>
+    </article>
+
+    <section class="blocos">
+    <section class="lado-esquerdo lista">
         <ol id="licoes_aprendidas">
             <h2>Lições Aprendidas</h2>
             <br>
@@ -58,7 +55,7 @@
         </ol>
     </section>
     
-    <section class="lado-direito">
+    <section class="lado-direito lista">
         <ul id="licoes_a_aprender">
             <h2>Lições a Aprender</h2>
             <br>
@@ -74,19 +71,18 @@
             <li>Comunicação</li>
         </ul>
     </section>
+    </section>
 
-    </article>
-    <article class="blocos">
-        <aside>
-            <h3>Lorem ipsum</h2>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. <br>
-            Aenean massa. Cum sociis natoque penatibus et magnis dis.</p>
-        </aside>
-    </article>
-
-    <article class="blocos">
-    <section class="weeks">
+    <section class="blocos">
+    <aside>
+        <h3>Lorem ipsum</h2>
+        <br>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. <br>
+        Aenean massa. Cum sociis natoque penatibus et magnis dis.</p>
+    </aside>
+    </section>
+        
+    <section class="blocos">
         <table>
             <thead>
                 <caption>
@@ -111,7 +107,6 @@
             </thead>
         </table>
     </section>
-    </article>
 
     </main>
 
