Adiciona tabela a pagina

--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
     </header>
 
       <img id="minha_foto" src="gilson.png" alt="foto de Gilson" />
+      <table id="tabela_course">
+          <th>Conteúdo</th>
+          <tr>
+            <td>Bloco 01: Unix & Bash</td>
+            <td>✓</td>
+          </tr>
+          <tr>
+            <td>Bloco 02: Git, GitHub e Internet</td>
+            <td>✓</td>
+          </tr>
+          <tr>
+            <td>Bloco 03: Introdução à HTML e CSS</td>
+            <td>✓</td>
+          </tr>
+      </table>
 
       <div class="listas">
         <ol id="licoes_aprendidas" class="lists">
