corrigindo link externo

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   </section>
 
   <nav id="linksExternos">
-    Contato: <a href = "https://www.linkedin.com/in/amandasottani/" target = "_blark"> linkedin.com/amandasottani</a>
-    | Interessado na Trybe? <a href="https://www.betrybe.com/"target = "_blark"> Clique aqui</a><br>
-    <a href="#minha_foto" target="_blark"> Inicio </a>
+    Contato: <a href="https://www.linkedin.com/in/amandasottani/" target="_blank"> linkedin.com/amandasottani</a>
+    | Interessado na Trybe? <a href="https://www.betrybe.com/"target = "_blank"> Clique aqui</a><br>
+    <a href="#minha_foto" target="_blank"> Inicio </a>
   </nav>
   <footer id="rodape">
     <p>2021|Todos os direitos reservado à Amanda Sottani Nascimento 
