fim, mas falta melhorar muito

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <a class="bot-nav" href="">QUEM SOU EU.</a>
                 <a class="bot-nav" href="">APRENDIZADOS.</a>
                 <a class="bot-nav" href="">CONTEUDOS FUTUROS.</a>
-                <a class="bot-nav" href="">CONTATOS.</a>
-                <a class="bot-nav" href="">CADASTRE-SE.</a>
+                <a class="bot-nav" href="https://app.betrybe.com/course" target="_blank">
+                    CADASTRE-SE.</a>
        
             </nav>
       
