--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
       <header id="cabecalho" class="Titulo">
-        <h1 id="titulo">Projeto 1</h1>
+        <h1 id="titulo">First Project.</h1>
         <nav>
           <h1 class="oculto">Navegação</h1>
           Home; Login;
@@ -20,7 +20,7 @@
       <main>
         <div id="Listas">
           <div class="text-listas">
-             <ol id="licoes_aprendidas">
+             <ul id="licoes_aprendidas">
                <h1>Lições Aprendidas:</h1>
                <li>Introdução ao que é Internet;</li>
                <li>Introdução ao Unix;</li>
@@ -32,11 +32,11 @@
                <li>Estrutura de páginas (HTML & CSS);</li>
                <li>Introdução a Soft Skills;</li>
                <li>Autoconhecimento;</li>
-            </ol>
+            </ul>
           </div> 
 
           <div class="text-listas">
-              <ol id="licoes_a_aprender">
+              <ul id="licoes_a_aprender">
                 <h1>Lições para aprender:</h1>
                <li>Javascript;</li>
                <li>Lógica de programação;</li>
@@ -48,7 +48,7 @@
                <li>Python;</li>
                <li>Programação Orientada a Objetos;</li>
                <li>Algoritmos;</li>
-              </ol>
+              </ul>
           </div>
         </div>
       </main>
@@ -70,7 +70,7 @@
         </aside>
       </section>
 
-      <footer class="Rodapé">
+      <footer id="rodape">
         <div> 
           Criado por: Luis Fernando
           <a href="https://www.linkedin.com/in/luisfpborba/" target="_blank">
