--- a/index.html
+++ b/index.html
@@ -46,11 +46,60 @@
     </section>
    <aside class="lado-esquerdo" >"Constantemente a Trybe nos desafia à conversar com outros alunos que não conhecemos sobre temas variados da nossa vida, eu que sou muito tímida, sempre fico nervosa com esses momentos, mas no final acaba sendo muito divertido e especial! Esses momentos me trouxeram muitas rizadas e amizades!"</aside>
   </section>
+  <section id="table-block">
+    <h3>Evolução do Módulo 1 | Fundamentos do Desenvolvimento Web</h3>
+    <table>
+      <tr>
+        <th> Bloco </th>
+        <th>Status</th>
+      </tr>
+      <tr>
+        <td>Bloco 1 - Unix & Bash </td>
+        <td> &#9745; </td>
+      </tr>
+      <tr>
+        <td>Bloco 2 - Git, GitHub e Internet </td>
+        <td> &#9745; </td>
+      </tr>
+      <tr>
+        <td>Bloco 3 - Introdução à HTML e CSS </td>
+        <td> &#9745; </td>
+      </tr>
+      <tr>
+        <td>Bloco 4 - Introdução à JavaScript e Lógica de Programação </td>
+        <td> &#9744; </td>
+      </tr>
+      <tr>
+        <td>Bloco 5 - JavaScript: DOM, Eventos e Web Storage </td>
+        <td> &#9744; </td>
+      </tr>
+      <tr>
+        <td>Bloco 6 - HTML e CSS: Forms, Flexbox e Responsivo </td>
+        <td> &#9744; </td>
+      </tr>
+      <tr>
+        <td>Bloco 7 - Introdução à JavaScript ES6 e Testes Unitários </td>
+        <td> &#9744; </td>
+      </tr>
+      <tr>
+        <td>Bloco 8 - Higher Order Functions do JavaScript ES6 </td>
+        <td> &#9744; </td>
+      </tr>
+      <tr>
+        <td>Bloco 9 - JavaScript Assíncrono e Promises </td>
+        <td> &#9744; </td>
+      </tr>
+      <tr>
+        <td>Bloco 10 - Testes automatizados com Jest </td>
+        <td> &#9744; </td>
+      </tr>
+    </table>
+  </section> 
 
   <nav id="linksExternos">
-    Contato: <a href="https://www.linkedin.com/in/amandasottani/" target="_blank"> linkedin.com/amandasottani</a>
+    | Contato: <a href="https://www.linkedin.com/in/amandasottani/" target="_blank"> linkedin.com/amandasottani</a><br>
     | Interessado na Trybe? <a href="https://www.betrybe.com/"target = "_blank"> Clique aqui</a><br>
-    <a href="#minha_foto" target="_blank"> Inicio </a>
+    | <a href="#minha_foto" target="_blank"> Inicio </a>
   </nav>
   <footer id="rodape">
     <p>2021|Todos os direitos reservado à Amanda Sottani Nascimento 
