--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
              <p>Acredito que posso definir a Trybe em uma palavra: <strong>Intenso</strong>. Entrei no curso sem nenhum conhecimento prévio na área de programação e sem nenhum background para parte de lógica e devo dizer que estou surpreso com os resultados, o aprendizado e constante mas "sólido", a base que está sendo criada através do course, exercícios e das aulas ao vivo incrível e  usando esse aprendizado quero ver até aonde posso chegar. #vqv</p>
           </div>
          </article>
-        
+      </section>
+      
+      <section>
         <aside>
           <div id="Softskills" class="article_aside">
            <h1>Softskills</h1>
