--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </header>
     <section id="profile_image">
         <img src="felipepugas.jpeg" alt="Foto de Felipe Pugas" id="minha_foto">
-        <aside id="text_about_apprenticeship">Desde que entrei na Trybe, venho aprendendo muito e evoluindo cada vez mais rápido. Não estou apenas aprendendo programação, como também aprendendo a aprender, a trabalhar como programador e também habilidades interpessoais</aside>
+        <aside id="text_about_apprenticeship">Desde que entrei na Trybe, venho aprendendo muito e evoluindo cada vez
+            mais rápido. Não estou apenas aprendendo programação, como também aprendendo a aprender, a trabalhar como
+            programador e também habilidades interpessoais</aside>
     </section>
     <nav id="listas">
         <ol id="licoes_aprendidas">
@@ -54,7 +56,7 @@
     </section>
     <footer id="rodape">
         <a href="https://open.spotify.com/track/4CHzYvpgo49AP845cCoOmy?si=6d83edd499e34dad" target="_blank"
-        id="recommendation">Recomendação de música</a>
+            id="recommendation">Recomendação de música</a>
     </footer>
 </body>
 
