--- a/index.html
+++ b/index.html
@@ -10,22 +10,30 @@
  <body>
    <!-- Cabeçalho da página  -->
    <header id="cabecalho">
-     <img src="trybe_logo.png" alt="Imagem do logotipo da Escola de programação Trybe" id="minha_foto">
-     <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+    <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     <!-- Barra de navegação  -->
      <nav id="navegacao">
-       <a href="https://www.linkedin.com/in/bruno-csr-ribeiro" target="_blank">LinkedIn<!--(will open a new window for the website)--></a>
-       <a href="https://github.com/brunocsrribeiro" target="_blank">GitHub<!--(will open a new window for the website)--></a>
+       <ul>
+         <li>
+           <a href="https://www.linkedin.com/in/bruno-csr-ribeiro" target="_blank">LinkedIn<!--(will open a new window for the website)--></a>
+         </li>
+         <li>
+           <a href="https://github.com/brunocsrribeiro" target="_blank">GitHub<!--(will open a new window for the website)--></a>
+         </li>
+       </ul>
      </nav>
    </header>
    <main id="container-principal">
+     <div>
+       <img src="image/bruno-ribeiro.png" alt="Foto: Bruno Ribeiro cabelo e barba escura, camisa cinza estampada com símbolo do Batman num fundo verde musgo" id="minha_foto">
+     </div>
      <div class="container-lado-esquerdo">
        <div class="lado-esquerdo">
-         <section>
-					 <article>
+         <article>
+					 <section>
 						 No Curso de Desenvolvimento Web da Trybe tenho aprendido bastante sobre como é o universo do desenvolvimento. No módulo de Fundamentos Web já aprendi sobre O unix e seus comandos, sobre controle de versão de arquivos  diretórios e sobre HTML e CSS. Também nesse ínicio já fui introduzido aos conhecimentos sobre soft-skills e sobre como são competências importantes no dia-a-dia dos desenvolvedores.
-					 </article>
-         </section>
+					 </section>
+         </article>
        </div>
        <div class="lado-direito">
          <aside>
