--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <link rel="stylesheet" href="/style.css" type="text/css"/>
     </head>
     <body>
-        <div>
         <header id="cabecalho">
            <h1 id="titulo"> 
               João Victor Avelino - Lessons learned </h1>
@@ -36,6 +35,13 @@
             <li>Programação Orientada</li>
             <li>Algoritmos</li>
         </ul>
-        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <footer id="rodape">
+
+        </footer>
     </body>
  </html>
