--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <br>
         <br>
         <footer id="rodape">
-
+            <a href="https://www.linkedin.com/in/jo%C3%A3o-victor-avelino-514742219/" target= "_blank">My linkedin</a>
         </footer>
     </body>
  </html>
