--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         </ul>
         <br>
         <br>
+      <article>
+          Ainda estou no começo do curso, portanto, ainda existe muito para aprender,
+          o que me deixa empolgado e preocupado com meu progresso, até o moemnto já aprendi
+          muitas coisas que não sabia, como o HTML e CSS porem ainda tenho um longo
+          caminho a frente, o JavaScript e python são os que mais me despertam interesse.
+        </article>
         <br>
         <br>
         <br>
