--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         <br>
         <br>
         <br>
+        <aside>
+            <p>Durante esse começo de curso tive que já aprender muitas coisas, e o que mais tenho
+                gostado tem sido JavaScript, os exercicios me fazem sentir muito bem sobre minha habilidade nisso
+            </p>
+        </aside>
         <footer id="rodape">
             <a href="https://www.linkedin.com/in/jo%C3%A3o-victor-avelino-514742219/" target= "_blank">My linkedin</a>
         </footer>
