--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
         </ul>
         <br>
         <br>
+    <section id="Section1">
       <article>
           Ainda estou no começo do curso, portanto, ainda existe muito para aprender,
           o que me deixa empolgado e preocupado com meu progresso, até o moemnto já aprendi
           muitas coisas que não sabia, como o HTML e CSS porem ainda tenho um longo
           caminho a frente, o JavaScript e python são os que mais me despertam interesse.
         </article>
+    </section>
         <br>
         <br>
         <br>
@@ -53,6 +55,9 @@
         </aside>
         <footer id="rodape">
             <a href="https://www.linkedin.com/in/jo%C3%A3o-victor-avelino-514742219/" target= "_blank">My linkedin</a>
+            <nav>
+                <a href = "#minha_foto" > Image </a>
+            </nav>
         </footer>
     </body>
  </html>
