--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<html> 
+<html lang="pt-br"> 
     <head>
         <meta charset="UTF-8">
+        <title>Lessons learned - João Victor Avelino</title>
         <link rel="stylesheet" href="/style.css" type="text/css"/>
+       
     </head>
     <body>
         <header id="cabecalho">
            <h1 id="titulo"> 
               João Victor Avelino - Lessons learned </h1>
         </header>
-        <img id="minha_foto" src=/IMG-20210416-WA0253.jpg>
+        <img id="minha_foto" src=/IMG-20210416-WA0253.jpg alt="a photo of myself"> 
         <br>
         <br>
         <ol id="licoes_aprendidas">
