--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     </head>
     <body>
         <header id="cabecalho">
-            <h1 id="titulo">Olá, meu nome é Izabela Hammerschlag</h1>
+            <h1 id="titulo">Trybe - Izabela Hammerschlag</h1>
         </header>
-        <nav>
-            <p><a href="https://www.linkedin.com/in/izabela-hammerschlag-80bb49216/?originalSubdomain=br" target="_blank">Meu LinkedIn</a></p>
+        <nav class="indices">
+            <ul>
+                <li><a href="#licoes_aprendidas">Lições na Trybe</a></li>
+                <li><a href="#artigo">Artigo</a></li>
+                <li><a href="#curriculo">Currículo</a></li>
+            </ul>
         </nav>
         <section>
         <img id="minha_foto" src="minhafoto.png" alt="minha foto">
-        <h2>Lista de lições aprendidas:</h2>
+        <h2>Lições aprendidas:</h2>
         <ol class="lado-esquerdo" id="licoes_aprendidas">
             <li>Unix</li>
             <li>Bash</li>
@@ -23,11 +27,11 @@
             <li>Git</li>
             <li>GitHub</li>
             <li>Internet</li>
-            <li>plugins em programas</li>
+            <li>plugins</li>
             <li>Html</li>
             <li>CSS</li>
         </ol>
-        <h2>Lista de lições que ainda desejo aprender:</h2>
+        <h2>Lições que ainda desejo aprender:</h2>
         <ul class="lado-direito" id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>Flexbox</li>
@@ -39,29 +43,34 @@
             <li>Banco de dados (normalização e modelagem)</li>
             <li>Pyton</li>
             <li>Node JS</li>
+        </ul>
         </section>
         <section>
             <table class="table">
                 <tr>
-                  <td><b>graduação:</b></td>
+                  <td>Graduação:</td>
                   <td>Física-UFF (bacharelado)</td>
                 </tr>
                 <tr>
-                  <td><b>Pós-graduação:</b></td>
+                  <td>Pós-graduação:</td>
                   <td>Física-UFF (Nuclear Aplicada)</td>
                 </tr>
             </table>
         </section>
-        </ul>
-        <article>
-        <p>De UNIX ao HTML e CSS!!! a primeira e a segunda semana na Trybe foram muito intensas e com muito aprendizado. Comecei aprendendo sobre Unix e Bash tanto a parte teorica quanto a pratica, utilizando vários comandos no terminal (shell). Em seguida aprendi sobre Git e GitHub na pratica conseguindo versionar meus codigos em diferentes Branch's na Local para Remota, utilizei VS code para produzir os scripts. Depois estudei sobre a internet (modelo cliente & servidor, etc) e agora estudando muito HTML e CSS e realizando agora o meu primeiro projeto.</p>
+        <article id="artigo">
+        <p>De UNIX ao HTML e CSS! A primeira e a segunda semana na Trybe foram muito intensas, com muito aprendizado. Comecei aprendendo sobre Unix e Bash, tanto a parte teorica quanto a pratica (utilizando vários comandos no terminal (shell)). Em seguida aprendi sobre Git e GitHub conseguindo versionar meus códigos em diferentes Branch's na Local para Remota, utilizando o VS code para produzir os scripts. Depois estudei sobre a internet (modelo cliente & servidor) e agora estudando muito HTML e CSS e realizando finalmente meu primeiro projeto!</p>
         </article>
         <aside>
-            <p>Com o HTML e CSS foi possível fazer meu portfolio e colocar para o Mundo ver, além de praticar muito com outros sites aprendendo a estilizar e deixá-lo acessível.</p>
+            <p>Com o HTML e CSS foi possível fazer meu portfólio, além de praticar muito com outros sites através do inspecionamento no console e aprendendo a estilizar páginas, além de deixa-las mais acessíveis.<br> #VQV #foqueteNaoTemRe</p>
         </aside>
+        <section id="curriculo">
+            <h3>Currículo:</h3>
+            <p><a href="https://www.linkedin.com/in/izabela-hammerschlag-80bb49216/?originalSubdomain=br" target="_blank">Meu LinkedIn</a></p>
+            <p><a href="http://lattes.cnpq.br/1275762225707636" target="_blank">Meu Lattes</a></p>
+            <p><a href="https://izabelahammer.github.io/" target="_blank">Meu Portfólio</a></p>
+        </section>
         <footer id="rodape">
-            <p>Primeiro projeto</p>
+            <p>Primeiro projeto  |  lessons learned  |  Agosto de 2021</p>
         </footer>
-        <!– verificado com CodeSniffer ->
     </body>
 </html>
