ultima atualizacao do projeto lessons leanerd

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </nav>
         <section>
         <img id="minha_foto" src="minhafoto.png" alt="minha foto">
+        <img id="trybe" src="https://theme.zdassets.com/theme_assets/9633455/9814df697eaf49815d7df109110815ff887b3457.png" alt="simbolo da trybe">
         <h2>Lições aprendidas:</h2>
         <ol class="lado-esquerdo" id="licoes_aprendidas">
             <li>Unix</li>
@@ -65,9 +66,9 @@
         </aside>
         <section id="curriculo">
             <h3>Currículo:</h3>
-            <p><a href="https://www.linkedin.com/in/izabela-hammerschlag-80bb49216/?originalSubdomain=br" target="_blank">Meu LinkedIn</a></p>
-            <p><a href="http://lattes.cnpq.br/1275762225707636" target="_blank">Meu Lattes</a></p>
-            <p><a href="https://izabelahammer.github.io/" target="_blank">Meu Portfólio</a></p>
+            <a href="https://www.linkedin.com/in/izabela-hammerschlag-80bb49216/?originalSubdomain=br" target="_blank">Meu LinkedIn</a>
+            <a href="http://lattes.cnpq.br/1275762225707636" target="_blank">Meu Lattes</a>
+            <a href="https://izabelahammer.github.io/" target="_blank">Meu Portfólio</a>
         </section>
         <footer id="rodape">
             <p>Primeiro projeto  |  lessons learned  |  Agosto de 2021</p>
