--- a/index.html
+++ b/index.html
@@ -52,7 +52,23 @@
 
         </section>
         <section id="section-table">
-            <table id="tabela"><p>TABLE TABLE TABLE TABLE TABLE TABLE TABLE TABLE</p></table>
+        <table id="tabela">
+            <tr>
+                <th>TABLE</th>
+                <th>TABLE</th>
+                <th>TABLE</th>
+            </tr>
+            <tr>
+                <td>TABLE</td> 
+                <td>TABLE</td>
+                <td>TABLE</td>
+            </tr> 
+            <tr>
+                <td>TABLE</td>
+                <td>TABLE</td>
+                <td>TABLE</td>
+            </tr> 
+        </table>
         </section>  
     </main>
     <footer id="rodape"><p>Conteúdo compilado por Guilherme Andrade Rosa. Santos, 2021</p></footer>
