--- a/index.html
+++ b/index.html
@@ -15,33 +15,34 @@
   <figure>
     <img id="minha_foto" img src="/img/pic-perfil-light.png" alt="Minha Foto">
   </figure>
-  <section>
-    <ol id="licoes_aprendidas">
-      <li>Unix</li>
-      <li>Git e Github</li>
-      <li>Empatia</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>HTML Semântico</li>
-      <li>Box Model</li>
-      <li>Classes e ID</li>
-      <li>Pseudoclasses</li>
-      <li>Elementos Block e Inlkine</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-      <li>Java Script</li>
-      <li>DOM</li>
-      <li>CSS Responsivo</li>
-      <li>ES6</li>
-      <li>React</li>
-      <li>NodeJS</li>
-      <li>SQL</li>
-      <li>Rest</li>
-      <li>MongoDB</li>
-      <li>Python</li>
-    </ul>
-  </section>
-  <section>
+  <div id="main">
+    <section class="lado-esquerdo">
+      <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git e Github</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>HTML Semântico</li>
+        <li>Box Model</li>
+        <li>Classes e ID</li>
+        <li>Pseudoclasses</li>
+        <li>Elementos Block e Inlkine</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <li>Java Script</li>
+        <li>DOM</li>
+        <li>CSS Responsivo</li>
+        <li>ES6</li>
+        <li>React</li>
+        <li>NodeJS</li>
+        <li>SQL</li>
+        <li>Rest</li>
+        <li>MongoDB</li>
+        <li>Python</li>
+      </ul>
+    </section>
+    <section class="lado-direito">
     <article>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem aperiam sit labore id? Dicta iusto fugiat minima voluptatibus placeat voluptatem cum ipsa aspernatur nihil ducimus repellendus tempora, est earum!</p>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt doloribus aperiam assumenda? Fuga obcaecati, libero esse, tempora nobis aut voluptatum nihil ut facilis sequi similique, eos commodi ea vel inventore?</p>
@@ -49,7 +50,8 @@
     <aside>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis totam reiciendis minus minima, fugiat sunt dolorum fugit illum accusamus asperiores vero pariatur. Distinctio perspiciatis architecto tempore. Assumenda perspiciatis iste ea.</p>
     </aside>
-  </section>
+    </section>
+</div>
   <table>
     <tr>
       <th>Nome</th>
