--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <figure>
     <img id="minha_foto" img src="/img/pic-perfil-light.png" alt="Minha Foto">
   </figure>
-  <div id="main">
+  <section >
     <section class="lado-esquerdo">
       <ol id="licoes_aprendidas">
         <li>Unix</li>
@@ -51,19 +51,20 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis totam reiciendis minus minima, fugiat sunt dolorum fugit illum accusamus asperiores vero pariatur. Distinctio perspiciatis architecto tempore. Assumenda perspiciatis iste ea.</p>
     </aside>
     </section>
-</div>
+  </section>
   <table>
-    <tr>
-      <th>Nome</th>
-      <th>Turma</th>
-    </tr>
-    <tr>
-      <td>Marcus Thadeu</td>
-      <td>16 Tribo B</td>
-    </tr>
+    <caption>Tabela</caption>
+      <tr>
+        <th>Nome</th>
+        <th>Turma</th>
+      </tr>
+      <tr>
+        <td>Marcus Thadeu</td>
+        <td>16 Tribo B</td>
+      </tr>
   </table>
   <footer id="rodape">
-    <a href="https://www.betrybe.com/" target="_blank">Visite Trybe</a>
+    <a href="https://www.betrybe.com/" target="_blank">Visite Trybe <span class="ocultar">, abre nova janela</span></a>
   </footer>
 </body>
 </html>
