--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <footer id="rodape">
         Hiago Briano - Turma16 - Tribo B
     </footer>
-    
+    <!-- Consegui a informação de como criar tabela no site:
+    https://www.homehost.com.br/blog/criar-sites/tabela-html/ -->
 </body>
 </html>
