--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
           <td>Joins</td>
           <td>POO</td>
         </tr>
-        <tr></tr><td>GitHub</td>
+        <tr>
+          <td>GitHub</td>
           <td>React Router</td>
           <td>ORM</td>
           <td>Redes</td>
