--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
   <main>
 
-    <div id="container_image">
+    <section id="container_image">
       <img id="minha_foto" src="images/minha-foto.jpeg" alt="Foto do Jonatas">
-    </div>
+    </section>
 
     <section id="container_licoes">
       <div id="container_ol">
