--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<head></head>
-<body>
-    
-</body>
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+        <header id="cabecalho">
+            <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+          </header>
+    </body>
+</html>    
