--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned | Trybe</h1>
     </header>
-    
+    <img src="img/2021-09-12-195618.jpg" alt="Matheus Machado" id="minha_foto">
 </body>
 </html>
